<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColorOut">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:layout_constraintBottom_toTopOf="@id/alarm_settings"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/close_button"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="@dimen/marginBasic"
            android:backgroundTint="@color/backgroundColorOff"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:shadowColor="@android:color/white"
            app:icon="@drawable/ic_baseline_close_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="24dp"
            app:iconTint="@color/addAlarmButtonPlusColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/alarm_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_alarm"
            android:textColor="@color/alarmTimeTextColor"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/done_button"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="@dimen/marginBasic"
            android:backgroundTint="@color/backgroundColorOff"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:shadowColor="@android:color/white"
            app:icon="@drawable/ic_baseline_done_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="24dp"
            app:iconTint="@color/addAlarmButtonPlusColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/alarm_settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/list_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/time_layout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintBottom_toTopOf="@id/repeat_layout"
            app:layout_constraintTop_toTopOf="parent">

            <TimePicker
                android:id="@+id/temporary_time_picker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:numbersTextColor="@color/alarmTimeTextColor"
                android:timePickerMode="spinner"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/repeat_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/time_layout">

            <TextView
                android:id="@+id/repeat_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginBasic"
                android:text="@string/repeat"
                android:textColor="@color/alarmTimeTextColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/repeat_arrow"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="@dimen/marginBasic"
                android:contentDescription="@string/choose_description"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/alarmTimeTextColor" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sound_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/repeat_layout">

            <TextView
                android:id="@+id/sound_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginBasic"
                android:text="@string/sound"
                android:textColor="@color/alarmTimeTextColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/sound_arrow"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="@dimen/marginBasic"
                android:contentDescription="@string/choose_description"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/alarmTimeTextColor" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/description_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/sound_layout"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginBasic"
                android:text="@string/description"
                android:textColor="@color/alarmTimeTextColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/description_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:textColor="@color/alarmNameTextColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/description_arrow"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.512"
                tools:text="Some description" />

            <ImageView
                android:id="@+id/description_arrow"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="@dimen/marginBasic"
                android:contentDescription="@string/choose_description"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/alarmTimeTextColor" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>